test/files/neg/t5497.scala
object TestQueryable extends App{
  ({
    case other => println(null.asInstanceOf[sq.Filter].tableName)
  } : Any => Unit)(null)
}
