test/files/neg/t5497.check
t5497.scala:3: error: not found: value sq
    case other => println(null.asInstanceOf[sq.Filter].tableName)
                                            ^
one error found
